--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lombard</title>
+    <script src="md5.min.js"></script>
     <script src="common.js"></script>
 </head>
 <body>
