--- a/index.html
+++ b/index.html
@@ -3,10 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>Lombard</title>
+    <link rel="stylesheet" href="style.css">
     <script src="md5.min.js"></script>
     <script src="common.js"></script>
 </head>
 <body>
-    
+
+    <main class="container">
+        <div class="page-number">Страница <span id="page-number"></span></div>
+
+        <form class="filters" id="filters-form">
+
+            <label for="filter-type">Отсоритровать по </label>
+            <select id="filter-type" name="filter-type">
+                <option value="" disabled selected>...</option>
+                <option value="brand">бренду</option>
+                <option value="product">названию</option>
+                <option value="price">цене</option>
+            </select>
+
+            <div class="filter-types">
+                <select id="brand" name="brand" hidden>
+                    <option value="" disabled selected>Выберите бренд</option>
+                </select>
+
+                <input list="price" type="number" name="price" placeholder="Введите цену" hidden>
+                <datalist id="price"></datalist>
+
+                <input list="product" type="text" name="product" placeholder="Введите название" hidden>
+                <datalist id="product"></datalist>
+            </div>
+
+            <br>
+            <input type="submit" id="clear" value="Сбросить фильтр">
+            <input type="submit" id="apply" value="Применить фильтр">
+        </form >
+
+        <ul class="products" id="main-products">
+            <li hidden id="product-template">
+                <div class="id">{id}</div>
+                <div class="product">{product}</div>
+                <div class="brand">{brand}</div>
+                <div class="price">{price} руб.</div>
+            </li>
+        </ul>
+        <div id="loading">Идет загрузка...</div>
+
+        <nav id="pagination">
+            <a href="">1</a>
+            <a href="">2</a>
+            <a href="">3</a>
+            <a href="">4</a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </nav>
+    </main>
+
 </body>
 </html>
