--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <form class="filters" id="filters-form">
 
-            <label for="filter-type">Отсоритровать по </label>
+            <label for="filter-type">Отсоритровать товары по </label>
             <select id="filter-type" name="filter-type">
                 <option value="" disabled selected>...</option>
                 <option value="brand">бренду</option>
@@ -43,20 +43,16 @@
             <li hidden id="product-template">
                 <div class="id">{id}</div>
                 <div class="product">{product}</div>
-                <div class="brand">{brand}</div>
+                <div class="brand">Бренд: {brand}</div>
                 <div class="price">{price} руб.</div>
             </li>
         </ul>
-        <div id="loading">Идет загрузка...</div>
+        <div id="loading">
+            <img src="loading.gif" alt="Идет загрузка...">
+            Идет загрузка...
+        </div>
 
         <nav id="pagination">
-            <a href="">1</a>
-            <a href="">2</a>
-            <a href="">3</a>
-            <a href="">4</a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
         </nav>
     </main>
 
