--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lombard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="md5.min.js"></script>
     <script src="common.js"></script>
 </head>
@@ -48,7 +48,7 @@
             </li>
         </ul>
         <div id="loading">
-            <img src="loading.gif" alt="Идет загрузка...">
+            <img src="images/loading.gif" alt="Идет загрузка...">
             Идет загрузка...
         </div>
 
