finished initial clean up

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <form class="filters" id="filters-form">
 
-            <label for="filter-type">Отсоритровать товары по </label>
-            <select id="filter-type" name="filter-type">
+            <label for="active-filter">Отсоритровать товары по </label>
+            <select id="active-filter" name="active-filter">
                 <option value="" disabled selected>...</option>
                 <option value="brand">бренду</option>
                 <option value="product">названию</option>
