clean up structure

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Lombard</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="md5.min.js"></script>
-    <script src="common.js"></script>
+    <script src="js/md5.min.js"></script>
+    <script src="js/common.js"></script>
 </head>
 <body>
 
